--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configuracion ambiente Desarrollo
-configuracion.autor=Diego
-configuracion.autor.email=diego931012@hotmail.com
+configuracion.autor=Jhon Doe
+configuracion.autor.email=jhonDoe@hotmail.com
