--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configuracion ambiente Desarrollo
-configuracion.autor=Jhon Doe
-configuracion.autor.email=jhonDoe@hotmail.com
+configuracion.autor=pepe Doe
+configuracion.autor.email=pepeDoe@hotmail.com
